refactor: Rename the level query string parameter to type
